# stv-model

./: README.md  docker-compose.yml  pyproject.toml
docker/: stv_demo_site.Dockerfile
stv_demo_site/: README.md  main.py
stv_demo_site/static/: index.html
stv_model/: example.py  model.py
test/public/: test_public_doc.py  test_readme.py
test/stv_model/: test_internals.py  test_random_election.py  test_scenarios.py
