[project]
name = "stv-model"
version = "0.1.0"
description = "Pārnesamās balss (Single Transferable Vote, STV) vēlēšanu sistēmas skaitīšanas algoritma demonstrācija."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
#log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_format = "%(message)s"
log_cli_date_format = "%H:%M:%S"
